# cmake

examples/: CMakeLists.txt  board.cmake  emsk.cmake  toolchain_gnu.cmake
examples/arc/: CMakeLists.txt
examples/board/: CMakeLists.txt  board.mk
examples/board/emsdp/: emsdp.cmake
examples/board/emsk/: emsk.cmake
examples/cmake/: app.cmake  options.cmake  rules.cmake  scripts.cmake  toolchain.cmake
examples/device/: CMakeLists.txt
examples/example/baremetal/blinky/: CMakeLists.txt  main.c~
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/: linker_gnu.ldf
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/application/: .mkdir_done  background_container.gcno  background_container.o.d  container1.gcno  container1.o.d  container2.gcno  container2.o.d  container_cfg.gcno  container_cfg.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/arc/: .mkdir_done  arc_cache.gcno  arc_cache.o.d  arc_connect.gcno  arc_connect.o.d  arc_exc_asm.o.d  arc_exception.gcno  arc_exception.o.d  arc_mpu.gcno  arc_mpu.o.d  arc_timer.gcno  arc_timer.o.d  arc_udma.gcno  arc_udma.o.d  arc_util.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/arc/startup/: .mkdir_done  arc_cxx_support.gcno  arc_cxx_support.o.d  arc_startup.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/: .mkdir_done  board.gcno  board.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/common/: .mkdir_done  emsk_gpio.gcno  emsk_gpio.o.d  emsk_init.gcno  emsk_init.o.d  emsk_timer.gcno  emsk_timer.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/flash_obj/: .mkdir_done  flash_obj.gcno  flash_obj.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/ip/designware/gpio/: .mkdir_done  dw_gpio_obj.gcno  dw_gpio_obj.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/ip/designware/iic/: .mkdir_done  dw_iic_obj.gcno  dw_iic_obj.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/ip/designware/spi/: .mkdir_done  dw_spi_obj.gcno  dw_spi_obj.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/ip/designware/uart/: .mkdir_done  dw_uart_obj.gcno  dw_uart_obj.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/board/emsk/drivers/mux/: .mkdir_done  mux.gcno  mux.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/device/ip/designware/gpio/: .mkdir_done  dw_gpio.gcno  dw_gpio.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/device/ip/designware/iic/: .mkdir_done  dw_iic.gcno  dw_iic.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/device/ip/designware/spi/: .mkdir_done  dw_spi.gcno  dw_spi.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/device/ip/designware/uart/: .mkdir_done  dw_uart.gcno  dw_uart.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/device/peripheral/flash/w25qxx/: .mkdir_done  spi_flash_w25qxx.gcno  spi_flash_w25qxx.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/embARC_generated/: .mkdir_done  arc.tcf  ccac.arg  core_config.h  core_config.s  mdb.arg  nsim.props
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/middleware/common/: .mkdir_done  console_io.gcno  console_io.o.d  embARC_test.gcno  embARC_test.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/middleware/common/ez_sio/: .mkdir_done  ez_sio.gcno  ez_sio.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/middleware/common/ringbuffer/: .mkdir_done  ringbuffer.gcno  ringbuffer.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/middleware/common/xprintf/: .mkdir_done  xprintf.gcno  xprintf.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/os/freertos/: .mkdir_done  croutine.gcno  croutine.o.d  event_groups.gcno  event_groups.o.d  list.gcno  list.o.d  queue.gcno  queue.o.d  stream_buffer.gcno  stream_buffer.o.d  tasks.gcno  tasks.o.d  timers.gcno  timers.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/os/freertos/portable/: .mkdir_done  heap_sel.gcno  heap_sel.o.d
examples/example/freertos/kernel_secure/obj_emsk_23/gnu_arcem7d/os/freertos/portable/Synopsys/ARC_EM_SECURESHIELD/: .mkdir_done  arc_freertos_exceptions.gcno  arc_freertos_exceptions.o.d  arc_support.o.d  freertos_tls.gcno  freertos_tls.o.d  port.gcno  port.o.d
examples/middleware/: CMakeLists.txt
examples/options/: CMakeLists.txt
examples/options/toolchain/: toolchain_gnu.cmake
examples/os/: CMakeLists.txt
